# tcp-sandbox

./: CMakeLists.txt  client  pkg.sh  readme.md  server
lib/x-tcp/: CMakeLists.txt
lib/x-tcp/inc/: x-log.h  x-tcp-defs.h  x-tcp.h  x-types.h  x-utils.h
lib/x-tcp/src/: x-log.c  x-tcp.c  x-utils.c
src/: x-client.c  x-server.c
x-base/: CMakeLists.txt
x-base/inc/: x-array.h  x-funcs.h  x-inet.h  x-list.h  x-logs.h  x-misc.h  x-poll-pool.h  x-poll-signal.h  x-poll-timer.h  x-poll-xchg.h  x-poll.h  x-types.h  x-util.h
x-base/src/: x-array.c  x-inet.c  x-logs.c  x-misc.c  x-poll-pool.c  x-poll-signal.c  x-poll-timer.c  x-poll-xchg.c  x-poll.c  x-util.c
x-client/: CMakeLists.txt  x-client.c
x-client/inc/: x-client-args.h  x-client.h
x-client/src/: main.c  x-client-args.c  x-client.c
x-server/: CMakeLists.txt  x-server.c
x-server-api/: CMakeLists.txt
x-server-api/inc/: x-server-api-defs.h  x-server-api-xchg.h  x-server-api.h  x-server-defs.h  x-server-error.h  x-server-frame.h  x-server-xchg.h
x-server-api/src/: x-server-api-xchg.c  x-server-api.c  x-server-error.c  x-server-frame.c  x-server-xchg.c
x-server/inc/: x-server-args.h  x-server-impl.h  x-server.h
x-server/src/: main.c  x-server-args.c  x-server-impl.c  x-server.c
